# Refinex-Terminal

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  clippy.toml  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  rustfmt.toml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/: COMMIT_CONVENTION.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/refinex-ai/: Cargo.toml
crates/refinex-ai/src/: lib.rs
crates/refinex-app/: Cargo.toml
crates/refinex-app/src/: main.rs
crates/refinex-app/src-tauri/: Cargo.toml  build.rs
crates/refinex-app/src-tauri/capabilities/: default.json
crates/refinex-app/src-tauri/icons/: icon.icns
crates/refinex-app/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/refinex-core/: Cargo.toml
crates/refinex-core/src/: lib.rs  pty.rs
crates/refinex-ui/: Cargo.toml
crates/refinex-ui/src/: lib.rs
crates/refinex-workspace/: Cargo.toml
crates/refinex-workspace/src/: lib.rs
docs/: AUTO_UPDATER.md  AUTO_UPDATER.zh-CN.md  MACOS_SIGNING.md  MACOS_SIGNING.zh-CN.md  PLAN.md  PLAN.zh-CN.md  PPLAN.md  SETUP.md  SETUP.zh-CN.md  WINDOWS_INSTALLER.md  WINDOWS_INSTALLER.zh-CN.md
scripts/: notarize.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: context-menu.reg  installer-hooks.nsi  uninstall-context-menu.reg
src-tauri/src/: lib.rs  logging.rs  main.rs  menu.rs
src-tauri/src/cli/: detector.rs  mod.rs
src-tauri/src/commands/: config.rs  font.rs  mod.rs  pty.rs  theme.rs  window.rs
src-tauri/src/config/: mod.rs
src-tauri/src/fs/: finder.rs  metadata.rs  mod.rs  reader.rs  reveal.rs  watcher.rs  writer.rs
src-tauri/src/git/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  process.rs  shell.rs
src-tauri/src/search/: mod.rs
src-tauri/src/ssh/: channel.rs  commands.rs  connection.rs  handler.rs  keystore.rs  known_hosts.rs  mod.rs  sftp.rs  sftp_commands.rs  transfer.rs  transfer_commands.rs  types.rs
src/components/: ErrorBoundary.tsx  SplitPane.tsx  TabBar.tsx  TerminalPane.tsx  UpdateNotification.tsx
src/components/ai/: CLISetupWizard.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/editor/: CodeEditor.tsx  MarkdownPreview.tsx  MermaidBlock.tsx  StatusBar.tsx
src/components/git/: BranchManager.tsx  DiffViewer.tsx  GitGraphView.tsx  GitGraphViewPanel.tsx  GitPanel.tsx
src/components/settings/: ClaudeCodeSettings.tsx  CopilotSettings.tsx  SettingsPanel.tsx  SettingsPanel.tsx.bak
src/components/settings/claude/: AgentsManager.tsx  ClaudeInstructionsManager.tsx  CommandsManager.tsx  EnvironmentManager.tsx  HooksManager.tsx  PermissionsManager.tsx  SandboxManager.tsx  SkillsManager.tsx
src/components/settings/copilot/: CustomAgentsManager.tsx  CustomInstructionsManager.tsx  MCPServerManager.tsx  SkillsManager.tsx
src/components/sftp/: CreateFolderDialog.tsx  DeleteFileDialog.tsx  FileConflictDialog.tsx  FilePanel.tsx  FileRow.tsx  LocalFileList.tsx  RemoteFileList.tsx  RemoteFileRow.tsx  SftpPanel.tsx  TransferQueue.tsx
src/components/sidebar/: FileEditorPanel.tsx  FilePreview.tsx  FileTabBar.tsx  FileTree.tsx  FuzzyFileFinder.tsx  GlobalSearch.tsx  QuickProjectSwitch.tsx  Sidebar.tsx
src/components/ssh/: DeleteGroupDialog.tsx  GroupContextMenu.tsx  HostContextMenu.tsx  HostFormDialog.tsx  HostKeyDialog.tsx  HostKeyVerifyDialog.tsx  HostSidebar.tsx  NewGroupDialog.tsx  RenameGroupDialog.tsx  SSHReconnectOverlay.tsx
src/components/tabs/: IDETerminalTab.tsx  SortableTab.tsx  TabBar.tsx
src/components/terminal/: AIBlockOverlay.tsx  AgentStatus.tsx  SplitContainer.tsx  TerminalContextMenu.tsx  TerminalSearch.tsx  TerminalView.tsx  TerminalViewSSH.tsx
src/components/ui/: Logo.tsx  cli-icon.tsx  command.tsx  context-menu.tsx  dropdown-menu.tsx  slider.tsx
src/hooks/: usePrefersReducedMotion.ts  useSSHReconnect.ts  useScreenReaderAnnouncement.ts  useTabs.ts  useTerminalTransport.ts
src/lib/: ai-block-detector.ts  commands.ts  contrast-checker.ts  debounce.ts  default-keybindings.ts  editor-languages.ts  editor-theme.ts  file-icons.tsx  focus-management.ts  font-manager.ts  fs-watcher.ts  fuzzy-finder.ts  git.ts  keybinding-manager.ts  pty.ts  safe-invoke.ts  tauri-pty.ts  tauri-ssh.ts  tauri-window.ts  terminal-manager.ts  theme-engine.ts  updater.ts  utils.ts
src/stores/: action-bus-store.ts  config-store.ts  file-editor-store.ts  git-store.ts  layout-store.ts  settings-store.ts  sidebar-store.ts  ssh-store.ts  terminal-store.ts
src/styles/: animations.css  editor-selection-debug.css  globals.css  markdown-preview.css  reduced-motion.css
src/types/: index.ts  paneTree.ts
themes/: catppuccin-mocha.toml  github-dark.toml  refinex-dark.toml  refinex-light.toml  tokyo-night.toml
