# SPDX-License-Identifier: MIT
# Copyright (c) 2026 refinex-lab

[workspace]
resolver = "2"
members = [
    "crates/refinex-app/src-tauri",
    "crates/refinex-app",
    "crates/refinex-core",
    "crates/refinex-ai",
    "crates/refinex-workspace",
    "crates/refinex-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["refinex-lab"]
license = "MIT"
repository = "https://github.com/refinex-lab/Refinex-Terminal"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
toml = "0.8"
dirs = "5"

# Terminal / PTY
portable-pty = "0.8"

# Encoding
base64 = "0.22"

# Filesystem
notify = "6"
ignore = "0.4"

# Internal crates
refinex-core = { path = "crates/refinex-core" }
refinex-ai = { path = "crates/refinex-ai" }
refinex-workspace = { path = "crates/refinex-workspace" }
refinex-ui = { path = "crates/refinex-ui" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic group — highest quality bar
pedantic = { level = "warn", priority = -1 }
# Nursery — experimental but valuable
nursery = { level = "warn", priority = -1 }
# Allow a few pedantic lints that produce too many false positives in practice
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
