[package]
name = "refinex-terminal"
version = "0.1.0"
description = "An AI-first terminal emulator for macOS and Windows"
authors = ["Refinex Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "refinex_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
portable-pty = "0.9.0"
toml = "0.8"
dirs = "5.0"
font-kit = "0.14"
base64 = "0.22.1"
notify-debouncer-full = "0.7.0"
ignore = "0.4.25"
git2 = "0.20.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = "0.4"

# SSH protocol core
russh = "0.48"
russh-keys = "0.48"
russh-sftp = "2.1"
ssh-key = "0.6"

# SSH Config parsing
ssh2-config = "0.4"

# Secure password storage
keyring = "3"

# Async runtime (already included by Tauri, ensure features)
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Async trait support
async-trait = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Search functionality
regex = "1"
walkdir = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
